# Markov-NGram-Typing-Model

./: .gitignore  LICENSE  README.md  example.ipynb  main.py  pyproject.toml
ngram/: model.py  tokenizer.py
