[project]
name = "markov-ngram-typing-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.0",
    "numpy>=2.3.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.0",
]
